# decline

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs
hyperbolic_working/src/: hyperbolic.rs  main.rs
src/: bisection.rs  conversion.rs  decline_calc.rs  exponential.rs  hyperbolic.rs  inputs.rs  main.rs  tests.rs
tests/: tests.rs
ui/: package-lock.json  package.json
ui/src/: App.js  index.css
ui/src/components/: Parameter.js  Parameters.js  SegmentType.js
ui/src/components/inputs/: Known.js
