[package]
name = "decline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
rocket = "0.4.10"
rocket_cors = "0.5.1"
rocket_contrib = "0.4.10"

